# dummyeditor

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  chipsetcell.cpp  chipsetcell.h  chipsetgraphicscene.h  chipsetgraphicsscene.cpp  chipsetgraphicsscene.h  dummyeditor.pro  fenprincipale.cpp  fenprincipale.h  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  mapcell.cpp  mapcell.h  mapeditdialog.cpp  mapeditdialog.h  mapeditdialog.ui  mapgraphicsscene.cpp  mapgraphicsscene.h  mapstreeview.cpp  mapstreeview.h  newmapdialog.cpp  newmapdialog.h  newmapdialog.ui  sonar-project.properties  test2.pro
docs/: Installation_Windows-en.md  Installation_Windows-fr.md  Qt Creator Installation  ihm-hierarchy-v2.qmodel  ihm-hierarchy.qmodel  ihm-model.qmodel
dummy/: blockinglayer.cpp  layer.cpp  layer.h  map.cpp  map.h  project.cpp  project.h  startingpoint.cpp  startingpoint.h
graphicmap/: blockingcrossitem.cpp  blockinggraphiclayer.cpp  blockinggraphiclayer.h  blockinglayerstate.cpp  blockinglayerstate.h  blockingsquareitem.cpp  drawingmapstate.cpp  drawingmapstate.h  drawingtool.cpp  drawingtool.h  firstlayerstate.cpp  firstlayerstate.h  fourthlayerstate.cpp  fourthlayerstate.h  graphiclayer.cpp  graphiclayer.h  mapgraphicsscene.cpp  mapgraphicsscene.h  mapscenelayer.cpp  nodrawingtool.cpp  nodrawingtool.h  notpaintingstate.cpp  notpaintingstate.h  paintingblockinglayerstate.cpp  paintingblockinglayerstate.h  paintinggraphiclayerstate.cpp  paintinggraphiclayerstate.h  paintinglayerstate.cpp  paintinglayerstate.h  pendrawingmapstate.cpp  pendrawingmapstate.h  pendrawingtool.cpp  pendrawingtool.h  rectangledrawingtool.cpp  rectangledrawingtool.h  secondlayerstate.cpp  secondlayerstate.h  selectiondrawingclipboard.cpp  selectiondrawingclipboard.h  selectiondrawingtool.cpp  (+9 more)
include/: CinematicsWidget.hpp  GeneralWindow.hpp  MapTools.hpp  chipsetGraphicsScene.hpp  chipsetgraphicsscene.hpp  definitions.hpp  drawingToolbarWidget.hpp  editorlayer.hpp  editorlevel.hpp  editormap.hpp  editorproject.hpp  editorstartingpoint.hpp  mainWindow.hpp  mainwindow.h  mainwindow.hpp  mapDocument.hpp  mapEditDialog.hpp  mapFloorTreeModel.hpp  mapFloorTreeWidget.hpp  map_levels_list_widget.hpp  mapeditdialog.h  mapeditdialog.hpp  maplevelslist.hpp  mapsTree.hpp  mapsTreeModel.hpp  mapsTreeView.hpp  mapstreeview.hpp
include/drawingTool/: blockingEraser.hpp  blockingGeneralTool.hpp  blockingPen.hpp  drawingSelection.hpp  drawingTool.hpp  drawingVisitor.hpp  graphicEraser.hpp  graphicGeneralTool.hpp  graphicPaletteTool.hpp  graphicPen.hpp  graphicRectangle.hpp
include/drawing_tool/: drawing_tool.hpp  graphic_pen.hpp  selection.hpp  visitor.hpp
include/dummy/: blockinglayer.hpp  layer.hpp  map.hpp  project.hpp
include/editor/: blocking_layer.hpp  events_layer.hpp  floor.hpp  graphic_layer.hpp  layer.hpp  layerBlocking.hpp  layerEvents.hpp  layerGraphic.hpp  level.hpp  map.hpp  project.hpp  startingPoint.hpp  starting_point.hpp
include/graphicMap/: blockingItemCross.hpp  blockingItemSquare.hpp  eventItemSquare.hpp  graphicItem.hpp  graphicLayerVisitor.hpp  layerGraphic.hpp  layerGraphicBlocking.hpp  layerGraphicEvents.hpp  layerGraphicVisible.hpp  mapGraphicsScene.hpp  mapSceneLayer.hpp
include/graphicmap/: blockingcrossitem.hpp  blockinggraphiclayer.hpp  blockinglayerstate.hpp  blockingsquareitem.hpp  drawingtool.hpp  eventsgraphiclayer.hpp  eventsquareitem.hpp  firstlayerstate.hpp  fourthlayerstate.hpp  graphic_layer_visitor.hpp  graphiclayer.hpp  mapgraphicsscene.hpp  mapscenelayer.hpp  nodrawingtool.hpp  notpaintingstate.hpp  paintinggraphiclayerstate.hpp  paintinglayerstate.hpp  pendrawingtool.hpp  rectangledrawingtool.hpp  secondlayerstate.hpp  selectiondrawingclipboard.hpp  selectiondrawingtool.hpp  startingpointlayer.hpp  startingpointlayerstate.hpp  thirdlayerstate.hpp  visiblegraphiclayer.hpp
include/layer_clipboard/: blocking.hpp  clipboard.hpp  visible.hpp
include/misc/: abstractmapleveltreeitem.hpp  map_tree_model.hpp  mapdocument.hpp  maplayertreeitem.hpp  mapleveltreeitem.hpp  mapleveltreemodel.hpp  maptreemodel.hpp
include/utils/: Logger.hpp
include/widget_drawingToolbar/: drawing_tool_action.hpp  state.hpp  state_display_blocking_tools.hpp  state_display_graphic_tools.hpp  state_no_drawing_tools.hpp  widget.hpp
include/widget_mapFloorsList/: map_blocking_layer_tree_item.hpp  map_floor_tree_item.hpp  map_floor_tree_model.hpp  map_graphic_layer_tree_item.hpp  map_layer_tree_item.hpp  map_tree_item.hpp  widget.hpp
legacy/: drawingToolbarWidget.cpp  mainWindow.cpp  mainWindow.hpp  mainwindow.ui
legacy/drawingTool/: blockingEraser.cpp  blockingEraser.hpp  blockingGeneralTool.cpp  blockingGeneralTool.hpp  blockingPen.cpp  blockingPen.hpp  drawingSelection.cpp  drawingSelection.hpp  drawingTool.cpp  drawingVisitor.hpp  graphicEraser.cpp  graphicEraser.hpp  graphicGeneralTool.cpp  graphicGeneralTool.hpp  graphicPaletteTool.cpp  graphicPaletteTool.hpp  graphicPen.cpp  graphicPen.hpp  graphicRectangle.cpp  graphicRectangle.hpp
misc/: mapdocument.cpp  mapdocument.h  maptreemodel.cpp  maptreemodel.h  treeitem.cpp  treeitem.h  treemodel.cpp  treemodel.h
src/: CinematicsWidget.cpp  CinematicsWidget.ui  GeneralWindow.cpp  GeneralWindow.ui  MapTools.cpp  chipsetGraphicsScene.cpp  chipsetgraphicsscene.cpp  drawingToolbarWidget.cpp  editorlayer.cpp  editorlevel.cpp  editormap.cpp  editorproject.cpp  editorstartingpoint.cpp  main.cpp  mainWindow.cpp  mainwindow.cpp  mainwindow.ui  mapDocument.cpp  mapEditDialog.cpp  mapFloorTreeModel.cpp  mapFloorTreeWidget.cpp  mapFloorTreeWidget.ui  map_levels_list_widget.cpp  map_levels_list_widget.ui  mapeditdialog.cpp  mapeditdialog.ui  maplevelslist.cpp  maplevelslist.ui  mapsTree.cpp  mapsTreeModel.cpp  mapsTreeView.cpp  mapstreeview.cpp
src/drawingTool/: blockingEraser.cpp  blockingGeneralTool.cpp  blockingPen.cpp  drawingSelection.cpp  drawingTool.cpp  graphicEraser.cpp  graphicGeneralTool.cpp  graphicPaletteTool.cpp  graphicPen.cpp  graphicRectangle.cpp
(+138 files in other folders)
